--- a/arch/arm/boot/dts/socfpga_cyclone5_de10_nano.dtsi
+++ b/arch/arm/boot/dts/socfpga_cyclone5_de10_nano.dtsi
@@ -54,6 +54,15 @@
 		gpio-controller;
 	};
 
+	gpio_bd: gpio_bd@0x00010080 {
+		compatible = "altr,pio-18.1", "altr,pio-1.0";
+		reg = <0x00010080 0x00000010>;
+		altr,gpio-bank-width = <32>;
+		resetvalue = <0>;
+		#gpio-cells = <2>;
+		gpio-controller;
+	};
+
 	gpio_out: gpio_out@0x00109000 {
 		compatible = "altr,pio-1.0";
 		reg = <0x00109000 0x00000010>;
