arch/arm64/boot/dts/xilinx: Change DO modes
Signed-off-by: PopPaul2021 <paul.pop@analog.com>

--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-stingray.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-stingray.dts
@@ -371,7 +371,11 @@
 };
 
 &axi_data_offload_tx {
-	/delete-property/ adi,oneshot;
+	adi,oneshot;
+};
+
+&axi_data_offload_rx {
+	adi,bypass;
 };
 
 &iio_axi_tdd_0 {
