dt-bindings: adi,ad5791.yaml: Add support optional pwm
Add a optional pwm used by spi engine offload as a trigger to load
samples to the dac.

Signed-off-by: Axel Haslam <ahaslam@baylibre.com>

--- a/Documentation/devicetree/bindings/iio/dac/adi,ad5791.yaml
+++ b/Documentation/devicetree/bindings/iio/dac/adi,ad5791.yaml
@@ -42,6 +42,15 @@ properties:
       LDAC pin to be used as a hardware trigger to update the DAC channels.
     maxItems: 1
 
+  pwms:
+    description:
+      PWM used as trigger source for the SPI engine, also represents the
+      loading rate for the samples.
+    maxItems: 1
+
+  pwm-names:
+    const: cnv
+
 required:
   - compatible
   - reg
@@ -68,6 +77,8 @@ examples:
             reset-gpios = <&gpio_bd 16 GPIO_ACTIVE_LOW>;
             clear-gpios = <&gpio_bd 17 GPIO_ACTIVE_LOW>;
             ldac-gpios = <&gpio_bd 18 GPIO_ACTIVE_HIGH>;
+            pwms = <&adc_trigger 0 0>;
+            pwm-names = "cnv";
         };
     };
 ...
