--- a/arch/microblaze/boot/dts/kcu105_adrv9009.dts
+++ b/arch/microblaze/boot/dts/kcu105_adrv9009.dts
@@ -12,6 +12,7 @@
 
 #include "kcu105.dtsi"
 #include <dt-bindings/jesd204/adxcvr.h>
+#include <dt-bindings/iio/adc/adi,adrv9009.h>
 
 #define fmc_i2c fmc_hpc_iic
 #define fmc_spi axi_spi
@@ -54,6 +55,10 @@
 		adi,axi-pl-fifo-enable;
 		adi,axi-interpolation-core-available;
 		interpolation-gpios = <&axi_gpio 62 GPIO_ACTIVE_HIGH>;
+
+		jesd204-device;
+		#jesd204-cells = <2>;
+		jesd204-inputs = <&axi_adrv9009_tx_jesd 0 DEFRAMER_LINK_TX>;
 	};
 	rx_dma: rx-dmac@7c400000 {
 		compatible = "adi,axi-dmac-1.00.a";
@@ -108,38 +113,50 @@
 		#size-cells = <0>;
 		compatible = "adi,axi-adxcvr-1.0";
 		reg = <0x44a60000 0x1000>;
-		clocks = <&clk0_ad9528 1>, <&axi_rx_clkgen 0>;
-		clock-names = "conv", "div40";
+		clocks = <&clk0_ad9528 1>;
+		clock-names = "conv";
 		#clock-cells = <1>;
 		clock-output-names = "rx_gt_clk", "rx_out_clk";
 		adi,sys-clk-select = <XCVR_CPLL>;
 		adi,out-clk-select = <XCVR_REFCLK>;
 		adi,use-lpm-enable;
+
+		jesd204-device;
+		#jesd204-cells = <2>;
+		jesd204-inputs =  <&clk0_ad9528 0 FRAMER_LINK_RX>;
 	};
 	axi_adrv9009_adxcvr_rx_os: axi-adxcvr-rx-os@44a50000 {
 		#address-cells = <1>;
 		#size-cells = <0>;
 		compatible = "adi,axi-adxcvr-1.0";
 		reg = <0x44a50000 0x1000>;
-		clocks = <&clk0_ad9528 1>, <&axi_rx_os_clkgen>;
-		clock-names = "conv", "div40";
+		clocks = <&clk0_ad9528 1>; /* div40 is controlled by axi_adrv9009_rx_os_jesd */
+		clock-names = "conv";
 		#clock-cells = <1>;
 		clock-output-names = "rx_os_gt_clk", "rx_os_out_clk";
 		adi,sys-clk-select = <XCVR_CPLL>;
 		adi,out-clk-select = <XCVR_REFCLK>;
 		adi,use-lpm-enable;
+
+		jesd204-device;
+		#jesd204-cells = <2>;
+		jesd204-inputs =  <&clk0_ad9528 0 FRAMER_LINK_ORX>;
 	};
 	axi_adrv9009_adxcvr_tx: axi-adxcvr-tx@44a80000 {
 		#address-cells = <1>;
 		#size-cells = <0>;
 		compatible = "adi,axi-adxcvr-1.0";
 		reg = <0x44a80000 0x1000>;
-		clocks = <&clk0_ad9528 1>, <&axi_tx_clkgen>;
-		clock-names = "conv", "div40";
+		clocks = <&clk0_ad9528 1>; /* div40 is controlled by axi_adrv9009_tx_jesd */
+		clock-names = "conv";
 		#clock-cells = <1>;
 		clock-output-names = "tx_gt_clk", "tx_out_clk";
 		adi,sys-clk-select = <XCVR_QPLL>;
 		adi,out-clk-select = <XCVR_REFCLK>;
+
+		jesd204-device;
+		#jesd204-cells = <2>;
+		jesd204-inputs =  <&clk0_ad9528 0 DEFRAMER_LINK_TX>;
 	};
 	axi_adrv9009_rx_jesd: axi-jesd204-rx@44aa0000 {
 		compatible = "adi,axi-jesd204-rx-1.0";
@@ -152,6 +169,10 @@
 		clock-output-names = "jesd_rx_lane_clk";
 		adi,octets-per-frame = <4>;
 		adi,frames-per-multiframe = <32>;
+
+		jesd204-device;
+		#jesd204-cells = <2>;
+		jesd204-inputs = <&axi_adrv9009_adxcvr_rx 0 FRAMER_LINK_RX>;
 	};
 	axi_adrv9009_rx_os_jesd: axi-jesd204-rx@44ab0000 {
 		compatible = "adi,axi-jesd204-rx-1.0";
@@ -164,6 +185,10 @@
 		clock-output-names = "jesd_rx_os_lane_clk";
 		adi,octets-per-frame = <4>;
 		adi,frames-per-multiframe = <32>;
+
+		jesd204-device;
+		#jesd204-cells = <2>;
+		jesd204-inputs = <&axi_adrv9009_adxcvr_rx_os 0 FRAMER_LINK_ORX>;
 	};
 	axi_adrv9009_tx_jesd: axi-jesd204-tx@44a90000 {
 		compatible = "adi,axi-jesd204-tx-1.0";
@@ -180,6 +205,10 @@
 		adi,bits-per-sample = <16>;
 		adi,converters-per-device = <4>;
 		adi,control-bits-per-sample = <2>;
+
+		jesd204-device;
+		#jesd204-cells = <2>;
+		jesd204-inputs = <&axi_adrv9009_adxcvr_tx 0 DEFRAMER_LINK_TX>;
 	};
 };
 
@@ -223,6 +252,18 @@
 	rx1_enable-gpios = <&axi_gpio 55 0>;
 	tx2_enable-gpios = <&axi_gpio 56 0>;
 	tx1_enable-gpios = <&axi_gpio 57 0>;
+
+	jesd204-device;
+	#jesd204-cells = <2>;
+	jesd204-top-device = <0>; /* This is the TOP device */
+	jesd204-link-ids = <DEFRAMER_LINK_TX FRAMER_LINK_RX FRAMER_LINK_ORX>;
+
+	jesd204-inputs =
+		<&axi_adrv9009_rx_jesd 0 FRAMER_LINK_RX>,
+		<&axi_adrv9009_rx_os_jesd 0 FRAMER_LINK_ORX>,
+		<&axi_adrv9009_core_tx 0 DEFRAMER_LINK_TX>;
+
+	/delete-property/ interrupts;
 };
 
 &clk0_ad9528 {
