--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
@@ -54,15 +54,17 @@
 		//adi,pll1-clkin-frequencies = <122880000 30720000 0 0>;
 		//adi,vcxo-frequency = <122880000>;
 
-		adi,pll1-clkin-frequencies = <100000000 10000000 0 0>;
-		adi,pll1-ref-prio-ctrl = <0xE1>; /* prefer CLKIN1 -> CLKIN0 -> CLKIN2 -> CLKIN3 */
+		adi,pll1-clkin-frequencies = <122880000 30720000 0 0>;
+		//adi,pll1-clkin-frequencies = <100000000 10000000 0 0>;
+		adi,pll1-ref-prio-ctrl = <0xE4>; /* prefer CLKIN1 -> CLKIN0 -> CLKIN2 -> CLKIN3 */
 		adi,pll1-ref-autorevert-enable;
 
-		adi,vcxo-frequency = <100000000>;
+		adi,vcxo-frequency = <122880000>;
+		//adi,vcxo-frequency = <100000000>;
 
 		adi,pll1-loop-bandwidth-hz = <200>;
 		adi,pll1-charge-pump-current-ua = <720>;
-		adi,pfd1-maximum-limit-frequency-hz = <1000000>; /* 1 MHz */
+		adi,pfd1-maximum-limit-frequency-hz = <0>; /* 1 MHz */
 
 		adi,pll2-output-frequency = <3000000000>;
 
@@ -175,12 +177,12 @@
 				#address-cells = <1>;
 				#size-cells = <0>;
 
-				adi,interpolation = <8>;
+				adi,interpolation = <6>;
 
 				ad9081_dac0: dac@0 {
 					reg = <0>;
 					adi,crossbar-select = <&ad9081_tx_fddc_chan0>;
-					adi,nco-frequency-shift-hz = /bits/ 64 <1000000000>; /* 1000 MHz */
+					adi,nco-frequency-shift-hz = /bits/ 64 <2450000000>; /* 1000 MHz */
 				};
 				ad9081_dac1: dac@1 {
 					reg = <1>;
@@ -192,7 +194,7 @@
 			adi,channelizer-paths {
 				#address-cells = <1>;
 				#size-cells = <0>;
-				adi,interpolation = <1>;
+				adi,interpolation = <2>;
 
 				ad9081_tx_fddc_chan0: channel@0 {
 					reg = <0>;
@@ -234,7 +236,7 @@
 					adi,samples-per-converter-per-frame = <1>; /* JESD S */
 					adi,high-density = <1>;			/* JESD HD */
 
-                                        adi,tpl-phase-adjust = <6>;
+                                        adi,tpl-phase-adjust = <12>;
 				};
 			};
 		};
@@ -251,15 +253,15 @@
 
 				ad9081_adc0: adc@0 {
 					reg = <0>;
-					adi,decimation = <4>;
-					adi,nco-frequency-shift-hz =  /bits/ 64 <1000000000>;
+					adi,decimation = <6>;
+					adi,nco-frequency-shift-hz =  /bits/ 64 <2450000000>;
 					adi,nco-mixer-mode = <AD9081_ADC_NCO_VIF>;
 					//adi,crossbar-select = <&ad9081_rx_fddc_chan0>, <&ad9081_rx_fddc_chan2>; /* Static for now */
 				};
 				ad9081_adc1: adc@1 {
 					reg = <1>;
-					adi,decimation = <4>;
-					adi,nco-frequency-shift-hz =  /bits/ 64 <(1000000000)>;
+					adi,decimation = <6>;
+					adi,nco-frequency-shift-hz =  /bits/ 64 <1100000000>;
 					adi,nco-mixer-mode = <AD9081_ADC_NCO_VIF>;
 					//adi,crossbar-select = <&ad9081_rx_fddc_chan1>, <&ad9081_rx_fddc_chan3>; /* Static for now */
 				};
