--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
@@ -56,14 +56,14 @@
 
 		adi,pll1-clkin-frequencies = <122880000 30720000 0 0>;
 		//adi,pll1-clkin-frequencies = <100000000 10000000 0 0>;
-		adi,pll1-ref-prio-ctrl = <0xE1>; /* prefer CLKIN1 -> CLKIN0 -> CLKIN2 -> CLKIN3 */
-		adi,pll1-ref-autorevert-enable;
+		adi,pll1-ref-prio-ctrl = <0xE4>; /* prefer CLKIN1 -> CLKIN0 -> CLKIN2 -> CLKIN3 */
+		//adi,pll1-ref-autorevert-enable;
 
 		adi,vcxo-frequency = <122880000>;
 		//adi,vcxo-frequency = <100000000>;
 
 		adi,pll1-loop-bandwidth-hz = <200>;
-		adi,pll1-charge-pump-current-ua = <720>;
+		adi,pll1-charge-pump-current-ua = <0>;
 		adi,pfd1-maximum-limit-frequency-hz = <1000000>; /* 1 MHz */
 
 		adi,pll2-output-frequency = <3000000000>;
