--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
@@ -15,10 +15,7 @@
 #include <dt-bindings/iio/adc/adi,ad9081.h>
 
 &axi_ad9081_adxcvr_rx {
-        /* Switch to QPLL */
-	adi,sys-clk-select = <0x00>;
-	adi,out-clk-select = <4>;
-
+	adi,sys-clk-select = <XCVR_CPLL>;
 };
 
 &axi_ad9081_core_tx {
@@ -51,20 +48,13 @@
 		* #fru-dump -b /sys/bus/i2c/devices/15-0050/eeprom
 		*/
 
-		//adi,pll1-clkin-frequencies = <122880000 30720000 0 0>;
-		//adi,vcxo-frequency = <122880000>;
 
 		adi,pll1-clkin-frequencies = <122880000 30720000 0 0>;
-		//adi,pll1-clkin-frequencies = <100000000 10000000 0 0>;
-		adi,pll1-ref-prio-ctrl = <0xE4>; /* prefer CLKIN1 -> CLKIN0 -> CLKIN2 -> CLKIN3 */
-		//adi,pll1-ref-autorevert-enable;
-
 		adi,vcxo-frequency = <122880000>;
-		//adi,vcxo-frequency = <100000000>;
 
 		adi,pll1-loop-bandwidth-hz = <200>;
-		adi,pll1-charge-pump-current-ua = <0>;
-		adi,pfd1-maximum-limit-frequency-hz = <1000000>; /* 1 MHz */
+		adi,pll1-ref-prio-ctrl = <0xE1>; /* prefer CLKIN1 -> CLKIN0 -> CLKIN2 -> CLKIN3 */
+		adi,pll1-ref-autorevert-enable;
 
 		adi,pll2-output-frequency = <3000000000>;
 
@@ -150,7 +140,7 @@
 		#size-cells = <0>;
 		compatible = "adi,ad9986";
 		reg = <0>;
-		spi-max-frequency = <5000000>;
+		spi-max-frequency = <10000000>;
 
 		/* Clocks */
 		clocks = <&hmc7044 2>;
@@ -261,8 +251,6 @@
 					adi,lanes-per-device = <8>;		/* JESD L */
 					adi,samples-per-converter-per-frame = <1>; /* JESD S */
 					adi,high-density = <1>;			/* JESD HD */
-
-                                        adi,tpl-phase-adjust = <0x0c>;
 				};
 			};
 		};
@@ -287,7 +275,7 @@
 				ad9081_adc1: adc@1 {
 					reg = <1>;
 					adi,decimation = <6>;
-					adi,nco-frequency-shift-hz =  /bits/ 64 <1100000000>;
+					adi,nco-frequency-shift-hz =  /bits/ 64 <2100000000>;
 					adi,nco-mixer-mode = <AD9081_ADC_NCO_VIF>;
 					//adi,crossbar-select = <&ad9081_rx_fddc_chan1>, <&ad9081_rx_fddc_chan3>; /* Static for now */
 				};
