--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
@@ -14,6 +14,10 @@
 #include <dt-bindings/iio/frequency/hmc7044.h>
 #include <dt-bindings/iio/adc/adi,ad9081.h>
 
+&axi_ad9081_adxcvr_rx {
+	adi,sys-clk-select = <XCVR_CPLL>;
+};
+
 &spi1 {
 	status = "okay";
 
