--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
@@ -14,12 +14,15 @@
 #include <dt-bindings/iio/frequency/hmc7044.h>
 #include <dt-bindings/iio/adc/adi,ad9081.h>
 
-#define HMC7044_PLL2_FREQUENCY	2949120000
-#define AD9986_DAC_FREQUENCY	11796480000
-#define AD9986_ADC_FREQUENCY	3932160000
-
 &axi_ad9081_adxcvr_rx {
-	adi,sys-clk-select = <XCVR_CPLL>;
+        /* Switch to QPLL */
+	adi,sys-clk-select = <XCVR_QPLL>;
+	adi,out-clk-select = <XCVR_REFCLK_DIV2>;
+
+};
+
+&axi_ad9081_core_tx {
+	adi,axi-pl-fifo-enable;
 };
 
 &spi1 {
@@ -48,15 +51,20 @@
 		* #fru-dump -b /sys/bus/i2c/devices/15-0050/eeprom
 		*/
 
-
 		adi,pll1-clkin-frequencies = <122880000 30720000 0 0>;
 		adi,vcxo-frequency = <122880000>;
 
-		adi,pll1-loop-bandwidth-hz = <200>;
+		//adi,pll1-clkin-frequencies = <100000000 10000000 0 0>;
 		adi,pll1-ref-prio-ctrl = <0xE1>; /* prefer CLKIN1 -> CLKIN0 -> CLKIN2 -> CLKIN3 */
 		adi,pll1-ref-autorevert-enable;
 
-		adi,pll2-output-frequency = <HMC7044_PLL2_FREQUENCY>;
+		//adi,vcxo-frequency = <100000000>;
+
+		adi,pll1-loop-bandwidth-hz = <200>;
+		adi,pll1-charge-pump-current-ua = <720>;
+		adi,pfd1-maximum-limit-frequency-hz = <1000000>; /* 1 MHz */
+
+		adi,pll2-output-frequency = <3000000000>;
 
 		adi,sysref-timer-divider = <1024>;
 		adi,pulse-generator-mode = <0>;
@@ -119,7 +127,7 @@
 		hmc7044_c12: channel@12 {
 			reg = <12>;
 			adi,extended-name = "FPGA_REFCLK2";
-			adi,divider = <6>;
+			adi,divider = <4>;
 			adi,driver-mode = <HMC7044_DRIVER_MODE_LVDS>;
 		};
 		hmc7044_c13: channel@13 {
@@ -134,14 +142,12 @@
 
 &fmc_spi {
 
-	/delete-node/ ad9081@0;
-
-	trx0_ad9081: ad9986@0 {
+	trx0_ad9081: ad9081@0 {
 		#address-cells = <1>;
 		#size-cells = <0>;
 		compatible = "adi,ad9986";
 		reg = <0>;
-		spi-max-frequency = <10000000>;
+		spi-max-frequency = <5000000>;
 
 		/* Clocks */
 		clocks = <&hmc7044 2>;
@@ -163,7 +169,7 @@
 			#size-cells = <0>;
 			#address-cells = <1>;
 
-			adi,dac-frequency-hz = /bits/ 64 <AD9986_DAC_FREQUENCY>;
+			adi,dac-frequency-hz = /bits/ 64 <12000000000>;
 
 			adi,main-data-paths {
 				#address-cells = <1>;
@@ -174,24 +180,13 @@
 				ad9081_dac0: dac@0 {
 					reg = <0>;
 					adi,crossbar-select = <&ad9081_tx_fddc_chan0>;
-					adi,nco-frequency-shift-hz = /bits/ 64 <2450000000>; /* 1000 MHz */
+					adi,nco-frequency-shift-hz = /bits/ 64 <2100000000>; /* 1000 MHz */
 				};
 				ad9081_dac1: dac@1 {
 					reg = <1>;
 					adi,crossbar-select = <&ad9081_tx_fddc_chan1>;
-					adi,nco-frequency-shift-hz = /bits/ 64 <2100000000>; /* 1100 MHz */
+					adi,nco-frequency-shift-hz = /bits/ 64 <2450000000>; /* 1100 MHz */
 				};
-				ad9081_dac2: dac@2 {
-					reg = <2>;
-					adi,crossbar-select = <&ad9081_tx_fddc_chan2>;
-					adi,nco-frequency-shift-hz = /bits/ 64 <2200000000>; /* 1100 MHz */
-				};
-				ad9081_dac3: dac@3 {
-					reg = <3>;
-					adi,crossbar-select = <&ad9081_tx_fddc_chan3>;
-					adi,nco-frequency-shift-hz = /bits/ 64 <2300000000>; /* 1100 MHz */
-				};
-
 			};
 
 			adi,channelizer-paths {
@@ -211,18 +206,6 @@
 					adi,nco-frequency-shift-hz =  /bits/ 64 <0>;
 
 				};
-				ad9081_tx_fddc_chan2: channel@2 {
-					reg = <2>;
-					adi,gain = <2048>; /* 2048 * 10^(gain_dB/20) */
-					adi,nco-frequency-shift-hz =  /bits/ 64 <0>;
-
-				};
-				ad9081_tx_fddc_chan3: channel@3 {
-					reg = <3>;
-					adi,gain = <2048>; /* 2048 * 10^(gain_dB/20) */
-					adi,nco-frequency-shift-hz =  /bits/ 64 <0>;
-
-				};
 			};
 
 			adi,jesd-links {
@@ -233,9 +216,7 @@
 					#address-cells = <1>;
 					#size-cells = <0>;
 					reg = <0>;
-                                        //adi,logical-lane-mapping = /bits/ 8 <0 2 7 7 1 7 7 3>;
                                         adi,logical-lane-mapping = /bits/ 8 <0 2 7 6 1 5 4 3>;
-
 
 					adi,link-mode = <17>;			/* JESD Quick Configuration Mode */
 					adi,subclass = <1>;			/* JESD SUBCLASS 0,1,2 */
@@ -252,6 +233,8 @@
 					adi,lanes-per-device = <8>;		/* JESD L */
 					adi,samples-per-converter-per-frame = <1>; /* JESD S */
 					adi,high-density = <1>;			/* JESD HD */
+
+                                        adi,tpl-phase-adjust = <6>;
 				};
 			};
 		};
@@ -260,7 +243,7 @@
 			#size-cells = <0>;
 			#address-cells = <1>;
 
-			adi,adc-frequency-hz = /bits/ 64 <AD9986_ADC_FREQUENCY>;
+			adi,adc-frequency-hz = /bits/ 64 <6000000000>;
 
 			adi,main-data-paths {
 				#address-cells = <1>;
@@ -269,14 +252,14 @@
 				ad9081_adc0: adc@0 {
 					reg = <0>;
 					adi,decimation = <6>;
-					adi,nco-frequency-shift-hz =  /bits/ 64 <2450000000>;
+					adi,nco-frequency-shift-hz =  /bits/ 64 <2100000000>;
 					adi,nco-mixer-mode = <AD9081_ADC_NCO_VIF>;
 					//adi,crossbar-select = <&ad9081_rx_fddc_chan0>, <&ad9081_rx_fddc_chan2>; /* Static for now */
-				};CH
+				};
 				ad9081_adc1: adc@1 {
 					reg = <1>;
 					adi,decimation = <6>;
-					adi,nco-frequency-shift-hz =  /bits/ 64 <2100000000>;
+					adi,nco-frequency-shift-hz =  /bits/ 64 <2450000000>;
 					adi,nco-mixer-mode = <AD9081_ADC_NCO_VIF>;
 					//adi,crossbar-select = <&ad9081_rx_fddc_chan1>, <&ad9081_rx_fddc_chan3>; /* Static for now */
 				};
@@ -315,8 +298,6 @@
 						 <&ad9081_rx_fddc_chan1 FDDC_I>, <&ad9081_rx_fddc_chan1 FDDC_Q>;
 
                                         adi,logical-lane-mapping = /bits/ 8 <2 0 7 6 5 4 3 1>;
-                                        //adi,logical-lane-mapping = /bits/ 8 <2 0 7 7 7 7 3 1>;
-
 
 					adi,link-mode = <18>;			/* JESD Quick Configuration Mode */
 					adi,subclass = <1>;			/* JESD SUBCLASS 0,1,2 */
