--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
@@ -14,9 +14,16 @@
 #include <dt-bindings/iio/frequency/hmc7044.h>
 #include <dt-bindings/iio/adc/adi,ad9081.h>
 
-&axi_ad9081_adxcvr_rx {
+&axi_ad9081_adxcvr_tx {
         /* Switch to QPLL */
 	adi,sys-clk-select = <XCVR_QPLL>;
+	adi,out-clk-select = <XCVR_REFCLK_DIV2>;
+
+};
+
+&axi_ad9081_adxcvr_rx {
+        /* Switch to CPLL */
+	adi,sys-clk-select = <XCVR_CPLL>;
 	adi,out-clk-select = <XCVR_REFCLK_DIV2>;
 
 };
@@ -234,7 +241,7 @@
 					adi,samples-per-converter-per-frame = <1>; /* JESD S */
 					adi,high-density = <1>;			/* JESD HD */
 
-                                        adi,tpl-phase-adjust = <6>;
+                                        adi,tpl-phase-adjust = <0>;
 				};
 			};
 		};
