--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
@@ -16,7 +16,7 @@
 
 &axi_ad9081_adxcvr_tx {
         /* Switch to QPLL */
-	adi,sys-clk-select = <XCVR_CPLL>;
+	adi,sys-clk-select = <XCVR_QPLL>;
 	adi,out-clk-select = <XCVR_REFCLK_DIV>;
 
 };
