--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9986-m4-l8.dts
@@ -54,8 +54,8 @@
 		*/
 		
 		//adi,pll1-clkin-frequencies = <122880000 30720000 0 0>;
-		adi,pll1-clkin-frequencies = <0 10000000 0 0>;
-		adi,pll1-ref-prio-ctrl = <0xE4>; /* prefer CLKIN1 -> CLKIN0 -> CLKIN2 -> CLKIN3 */
+		adi,pll1-clkin-frequencies = <122880000 10000000 0 0>;
+		adi,pll1-ref-prio-ctrl = <0xE1>; /* prefer CLKIN1 -> CLKIN0 -> CLKIN2 -> CLKIN3 */
 		adi,vcxo-frequency = <122880000>;
 
 		//adi,pll1-clkin-frequencies = <100000000 10000000 0 0>;
