--- a/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9081-default.dtsi
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-zcu102-rev10-ad9081-default.dtsi
@@ -35,7 +35,7 @@
 		#size-cells = <0x1>;
 		ranges = <0 0 0 0xffffffff>;
 
-		rx_dma: dma@9c420000 {
+		/* rx_dma: dma@9c420000 {
 			compatible = "adi,axi-dmac-1.00.a";
 			reg = <0x9c420000 0x10000>;
 			#dma-cells = <1>;
@@ -51,8 +51,7 @@
 			#clock-cells = <0>;
 			interrupts = <0 108 IRQ_TYPE_LEVEL_HIGH>;
 			clocks = <&zynqmp_clk 73>;
-		};
-
+		};*/
 		axi_ad9081_core_rx: axi-ad9081-rx-hpc@84a10000 {
 			compatible = "adi,axi-ad9081-rx-1.0";
 			reg = <0x84a10000 0x8000>;
@@ -160,7 +159,7 @@
 			compatible = "adi,axi-sysid-1.00.a";
 			reg = <0x85000000 0x10000>;
 		};
-
+/*
 		axi_data_offload_tx: axi-data-offload-0@9c440000 {
 			compatible = "adi,axi-data-offload-1.0.a";
 			reg = <0x9c440000 0x10000>;
@@ -174,7 +173,7 @@
 		axi_data_offload_rx: axi-data-offload-1@9c450000 {
 			compatible = "adi,axi-data-offload-1.0.a";
 			reg = <0x9c450000 0x10000>;
-		};
+		};*/
 	};
 };
 
